[package]
name = "v2-sdk-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "v2_sdk_rs"
path = "src/lib.rs"

[[bin]]
name = "limit"
path = "src/bin/limit.rs"

[features]
cli = ["clap"]
default = ["cli"]


[dependencies]
alloy = { version = "1.0.24", features = ["full"] }
anyhow = "1.0.99"
clap = { version = "4.5", features = ["derive"], optional = true }
once_cell = "1.21.3"
rand = "0.9.2"
